--- a/style.css
+++ b/style.css
@@ -285,3 +285,88 @@ body {
 .rodape img {
     width: 20px;
 }
+
+/*QUEM SOMOS NÓS*/
+
+.conteudo-quem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
+}
+
+.quem-escrito {
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.titulo-objetivo {
+    font-size: 40px;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+}
+
+.conteudo-quem p{
+    font-size: 25px;
+    text-align: justify;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+}
+
+.titulo-ideia{
+    font-size: 40px;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+}
+
+/*CARD QUEM*/
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 250px;
+    height: 500px;
+    color: whitesmoke;
+    background-color: #e03d36;
+    border-radius: 10px;
+    filter: drop-shadow(0 2px 2px rgba(0,0,0, 0.5));
+    text-shadow: 1px 1px 2px black;
+}
+
+.topocard h3 {
+    font-size: 25px;
+}
+
+.card img {
+    height: 30px;
+       
+}
+
+.botoescard{
+    display: flex;
+    justify-content: space-around;
+}
+
+.cardbg {
+    background: url(./images/criadores.jpg) center/cover;
+    height: 50%;
+    width: 100%;
+}
+
+.topocard {
+    padding: 10px;
+    padding-top: 0px;
+}
+
+.baixocard {
+    padding: 10px;
+}
+
+.baixocard p {
+    font-size: 20px;
+}
